# synthesizer

./: CMakeLists.txt  README.md  vcpkg.json
include/: init.h  io.h  window.h
src/: init.c  io.c  main.c  window.c
